<resources>
    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>
    <string name="title_quantity">Quantity</string>
    <string name="quantity_dec">-</string>
    <string name="quantity_inc">+</string>
    <string name="default_quantity">2</string>
    <string name="title_order_summary">Order Summary</string>
    <string name="default_price">$0</string>
    <string name="order">Order</string>
    <string name="whitespace"> </string>
    <string name="title_toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream for $1</string>
    <string name="chocolate">Chocolate for $2</string>
    <string name="album_description">What should we call you?</string>

</resources>
